RESOLVED FIXED89327
[chromium/mac] Unbreak smooth scrolling.
https://bugs.webkit.org/show_bug.cgi?id=89327
Summary [chromium/mac] Unbreak smooth scrolling.
Nico Weber
Reported 2012-06-17 23:04:06 PDT
[chromium/mac] Unbreak smooth scrolling.
Attachments
Patch (4.90 KB, patch)
2012-06-17 23:05 PDT, Nico Weber
no flags
Patch for landing (4.90 KB, patch)
2012-06-18 10:07 PDT, Nico Weber
no flags
Patch for landing (4.94 KB, patch)
2012-06-18 10:42 PDT, Nico Weber
no flags
Nico Weber
Comment 1 2012-06-17 23:05:24 PDT
WebKit Review Bot
Comment 2 2012-06-18 09:42:37 PDT
Comment on attachment 148057 [details] Patch Rejecting attachment 148057 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 ERROR: /mnt/git/webkit-commit-queue/Tools/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output: http://queues.webkit.org/results/12981129
Nico Weber
Comment 3 2012-06-18 10:07:57 PDT
Created attachment 148116 [details] Patch for landing
WebKit Review Bot
Comment 4 2012-06-18 10:25:55 PDT
Comment on attachment 148116 [details] Patch for landing Rejecting attachment 148116 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 ERROR: /mnt/git/webkit-commit-queue/Tools/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output: http://queues.webkit.org/results/12981146
Nico Weber
Comment 5 2012-06-18 10:42:02 PDT
Created attachment 148126 [details] Patch for landing
WebKit Review Bot
Comment 6 2012-06-18 14:49:17 PDT
Comment on attachment 148126 [details] Patch for landing Clearing flags on attachment: 148126 Committed r120629: <http://trac.webkit.org/changeset/120629>
WebKit Review Bot
Comment 7 2012-06-18 14:49:35 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.