[chromium/mac] Unbreak smooth scrolling. https://bugs.webkit.org/show_bug.cgi?id=89327

Reviewed by Dimitri Glazkov.

Broken by Sam in r115589 / r115591.

Source/WebCore:

* platform/mac/ScrollAnimatorMac.mm:
(WebCore::scrollAnimationEnabledForSystem):

Tools:

* DumpRenderTree/mac/DumpRenderTree.mm:
(resetDefaultsToConsistentValues):
* TestWebKitAPI/mac/InjectedBundleControllerMac.mm:
(TestWebKitAPI::InjectedBundleController::platformInitialize):
* WebKitTestRunner/InjectedBundle/mac/InjectedBundleMac.mm:
(WTR::InjectedBundle::platformInitialize):


Canonical link: https://commits.webkit.org/107241@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@120629 268f45cc-cd09-0410-ab3c-d52691b4dbfc